Remove package.lock and tweak look of index.html

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 	</script>
 </head>
 <body>
-	<a href="#">Some Link</a>
-	<div><p>Some Text</p></div>
+	<!-- <a href="#">Some Link</a>
+	<div><p>Some Text</p></div> -->
 </body>
 </html>
